--- a/static/styles/elements.css
+++ b/static/styles/elements.css
@@ -50,3 +50,34 @@ nav a[disabled='true'] {
 a[disabled='true'] {
 	pointer-events: none;
 }
+
+.sprite {
+	display: flex;
+	image-rendering: pixelated;
+	border: inset #9aa28b 3px;
+	border-radius: 5px;
+	margin: 10px 0;
+	box-sizing: border-box;
+	background: linear-gradient(
+		15deg,
+		#cad5b5 64%,
+		#dde2d4 70%,
+		#dde2d4 81%,
+		#fff 86%,
+		#dde2d4 89%,
+		#dde2d4 100%
+	);
+	align-items: center;
+	justify-content: center;
+}
+
+#species-evolution-chain {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	margin-bottom: 20px;
+}
+
+a {
+	text-decoration: none;
+}
